--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
 <html>
   <head>
-    <title>Zombalypse</title>
+    <title>Zombusters</title>
   </head>
   <body>
-    <a href="https://play.google.com/store/apps/details?id=com.lexenzolab.vs">Zombalypse in Google Play.</a>
+    <a href="https://play.google.com/store/apps/details?id=com.lexenzolab.vs">Zombusters in Google Play.</a>
   </body>
 </html>
