--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Zombusters</title>
+    <meta http-equiv='refresh' content='0; URL=https://play.google.com/store/apps/details?id=com.lexenzolab.vs'>
   </head>
   <body>
     <a href="https://play.google.com/store/apps/details?id=com.lexenzolab.vs">Zombusters in Google Play.</a>
