--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv='refresh' content='0; URL=market://details?id=com.lexenzolab.vs'>
   </head>
-  <body>
+  <body style="max-width:900px; text-align:center;margin-left:auto ;margin-right:auto">
     <a href="https://play.google.com/store/apps/details?id=com.lexenzolab.vs">Zombusters in Google Play.</a>
   </body>
 </html>
